<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<!-- The name of the application. -->
	<string name="app_label">Agba</string>

	<!-- File chooser -->
	<string name="title_select_bios">Select BIOS</string>
	<string name="bios_not_found">You must specify a GBA BIOS file before you can play games. It is normally named <b>&lt;gba_bios.bin&gt;</b>. You may download it from the internet.</string>
	<string name="load_bios_title">BIOS</string>
	<string name="load_bios_failed">Load BIOS failed. You must have the GBA BIOS file before you can play games.</string>
	<string name="browse_bios">Browse</string>

	<string name="title_select_rom">Select ROM</string>
	<string name="no_files_in_folder">No files in this folder.</string>
	<string name="invalid_dir">Invalid directory</string>

	<string name="no_rom">No ROM loaded.\nPress <b>Menu</b> for more options.</string>
	<string name="upgrade">Upgrade to premium</string>
	<string name="purchase_title">Agba</string>
	<string name="purchase_message">Loading rom is only available in the Premium version. Do you want to upgrade?</string>
	<string name="ok_button">Ok</string>
	<string name="load_rom_failed">Load ROM failed. Please try another file.</string>
	<string name="quit_game_title">Quit Options</string>
	<string name="load_state_title">Load State</string>
	<string name="save_state_title">Save State</string>

	<!-- Menu -->
	<string name="open">Open</string>
	<string name="settings">Settings</string>
	<string name="reset">Reset</string>
	<string name="save_state">Save</string>
	<string name="load_state">Load</string>
	<string name="close">Close</string>
	<string name="quit">Quit</string>
	
	<string name="app_about">Agba on Google Play</string>
	<string name="app_more_apps">More apps</string>
	<string name="top_roms">Top roms</string>
	<string name="app_issues">Issues</string>
	<string name="search_roms">Search ROMs</string>
	<string name="search_roms_keyword">GBA ROMs download</string>
	<string name="email_subject">Issue about Agba</string>
	<string name="email_body">Write down your question here.</string>

	<!-- Settings -->
	<string name="settings_title">Settings</string>
	<string name="audio_settings">Audio settings</string>
	<string name="enable_sound">Enable sound</string>
	<string name="video_settings">Video settings</string>
	<string name="scaling_mode">Scaling mode</string>
	<string name="auto_frame_skip">Automatic frame skip</string>
	<string name="max_frame_skips">Max frame skips</string>
	<string name="max_frame_skips_summary">Maximum number of consecutive frame skips</string>
	<string name="input_settings">Input settings</string>
	<string name="key_settings">Key settings</string>
	<string name="key_settings_summary">Key bindings and shortcut keys</string>
	<string name="game_key_bindings">Game key bindings</string>
	<string name="shortcut_keys">Shortcut keys</string>
	<string name="quick_load">Quick load</string>
	<string name="quick_save">Quick save</string>
	<string name="enable_virtual_keypad">Virtual keypad</string>
	<string name="enable_virtual_keypad_summary">Enable touchable on-screen keypad</string>
	<string name="enable_trackball">Trackball</string>
	<string name="enable_trackball_summary">Use the trackball as Dpad</string>
	<string name="about">About</string>
    <string name="game_reset_needed_prompt">Will not take effect until game is reloaded</string>
    <string name="rom_not_supported">ROM file type is not supported.</string>
	<string name="press_key_prompt">Press a key on the keyboard...</string>
	<string name="key_none">&lt;none&gt;</string>
	<string name="key_unknown">&lt;unknown&gt;</string>
	<string name="key_clear">Clear</string>

	<string name="gamepad_up">Up</string>
	<string name="gamepad_down">Down</string>
	<string name="gamepad_left">Left</string>
	<string name="gamepad_right">Right</string>
	<string name="gamepad_up_left">Up+Left</string>
	<string name="gamepad_up_right">Up+Right</string>
	<string name="gamepad_down_left">Down+Left</string>
	<string name="gamepad_down_right">Down+Right</string>
	<string name="gamepad_select">Select</string>
	<string name="gamepad_start">Start</string>
	<string name="gamepad_A">Button A</string>
	<string name="gamepad_B">Button B</string>
	<string name="gamepad_A_turbo">Button A (turbo)</string>
	<string name="gamepad_B_turbo">Button B (turbo)</string>
	<string name="gamepad_TL">Trigger Left</string>
	<string name="gamepad_TR">Trigger Right</string>

	<string name="key_profiles">Key profiles</string>
	<string name="new_profile">New profile</string>
	<string name="new_profile_title">Profile name</string>
	<string name="new_profile_error">Error creating the new profile.</string>
	<string name="load_profile">Load profile</string>
	<string name="save_profile">Save profile</string>
	
	<!-- state slots -->
	<string name="slot_quick">Quick</string>
	<string name="slot_nth">Slot %1$d</string>
	<string name="slot_empty">&lt;empty&gt;</string>
	
	<!-- Menu -->
	<string name="netplay_connect">Net-play</string>
	<string name="netplay_disconnect">Disconnect</string>
	<string name="wifi_server">Wi-Fi (Server)</string>
	<string name="wifi_client">Wi-Fi (Client))</string>
	<string name="bluetooth_server">Bluetooth (Server) </string>
	<string name="bluetooth_client">Bluetooth (Client)</string>
	<string name="netplay_sync">Sync</string>
	<string name="fast_forward">Fast forward</string>
	<string name="no_fast_forward">Regular</string>
	<string name="screenshot">Screenshot</string>
	<string name="screenshot_saved">Screenshot saved to Gallery.</string>
	<string name="cheats">Cheats</string>
	
	<!-- File chooser -->
	<string name="refresh">Refresh</string>
	<string name="shortcut_name">Shortcut Name</string>
	
	<!-- Cheats -->
	<string name="no_cheats_help">"You haven't entered any cheats yet.\n\nTo add cheats, press <font fgcolor="#ffffffff"><b>Menu</b></font> and then <font fgcolor="#ffffffff"><b>New cheat</b></font>. Cheat codes can be:\n
		\n<li><font fgcolor="#ffffffff"><b>Game Genie</b></font></li>
		\n<li><font fgcolor="#ffffffff"><b>Action Replay</b></font></li>
		\n<li><font fgcolor="#ffffffff"><b>Gold Finger</b></font></li>"
	</string>
	<string name="new_cheat">New cheat</string>
	<string name="cheat_code">Code:</string>
	<string name="cheat_name">Name (Optional):</string>
	<string name="invalid_cheat_code">Cheat code is invalid!</string>
	
	<string-array name="vkeypad_size_entries">
		<item>Large</item>
		<item>Medium</item>
		<item>Small</item>
	</string-array>

	<string-array name="vkeypad_layout_entries">
		<item>Bottom + Bottom</item>
		<item>Bottom + Top</item>
		<item>Top + Bottom</item>
		<item>Top + Top</item>
	</string-array>
	
	<string name="enable_vibrator">Vibrate on keypress</string>
	<string name="vkeypad_settings">Virtual keypad settings</string>
	<string name="vkeypad_settings_summary">Setup the touchable on-screen keypad</string>	
	<string name="vkeypad_size">Controls size</string>
	<string name="vkeypad_transparency">Controls transparency</string>
	
	<string name="hide_controls">Hide controls</string>
	<string name="hide_dpad">Hide D-pad</string>
	<string name="hide_buttons">Hide A/B</string>
	<string name="hide_select_start">Hide select/start</string>
	<string name="hide_shoulders">Hide L/R buttons</string>
	<string name="vkeypad_layout">D-pad + buttons layout</string>
	<string name="dpad_4way">Disable D-pad diagonals</string>
	<string name="dpad_deadzone">D-pad dead zone</string>
	<string name="two_buttons_press">Two-buttons press</string>
	<string name="in_between_press">In-between press</string>
	<string name="in_between_press_summary">Press in-between two buttons to simulate simultaneous press</string>
	<string name="point_size_press">By point size</string>
	<string name="point_size_press_summary">Determine by touch point size (does not work on all devices)</string>
	<string name="point_size_press_threshold">Point size threshold</string>
	<string name="appearance">Appearance</string>
	
    <string name="orientation">Orientation</string>
	<string name="orientation_summary">The game screen orientation</string>
</resources>
